Dirty fix for datepicker input field width on mobile

--- a/src/dc/components/traveldate-pickup/date-range-pickup.module.scss
+++ b/src/dc/components/traveldate-pickup/date-range-pickup.module.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/mixins';
 
 .inputField {
+  width: 99%;
   height: 40px;
   box-sizing: border-box;
   border: 1px solid $glider-color-inputfields-border;
